Fix invisible no result label

--- a/app/styles/components/_large-search.scss
+++ b/app/styles/components/_large-search.scss
@@ -27,8 +27,7 @@
     }
 
     .no-results {
-      color: white;
-      margin-top: 0.5rem;
+      margin-top: 0.5rem 0;
       visibility: hidden;
 
       &.showing {
